2008-03-05  Release Manager

	* GCC 4.3.0 released.

2008-03-01  Jakub Jelinek  <jakub@redhat.com>

	* config/abi/post/x86_64-linux-gnu/32/baseline_symbols.txt: Update.
	* config/abi/post/x86_64-linux-gnu/baseline_symbols.txt: Likewise.
	* config/abi/post/powerpc-linux-gnu/baseline_symbols.txt: Likewise.
	* config/abi/post/i386-linux-gnu/baseline_symbols.txt: Likewise.
	* config/abi/post/powerpc64-linux-gnu/32/baseline_symbols.txt:
	Likewise.
	* config/abi/post/powerpc64-linux-gnu/baseline_symbols.txt: Likewise.
	* config/abi/post/i486-linux-gnu/baseline_symbols.txt: Likewise.

2008-02-29  Jakub Jelinek  <jakub@redhat.com>

	* config/abi/pre/gnu.ver: Remove
	_ZNKSt3tr14hashIgEclEg@@GLIBCXX_3.4.10 and
	_ZNKSt4hashIgEclEg@@GLIBCXX_3.4.10 export.
	* config/os/gnu-linux/ldbl-extra.ver: Export
	_ZNKSt3tr14hashIgEclEg@@GLIBCXX_LDBL_3.4.10
	and _ZNKSt4hashIgEclEg@@GLIBCXX_LDBL_3.4.10.
	* src/hash.cc: Only define long double hash specialization if
	_GLIBCXX_LONG_DOUBLE_COMPAT_IMPL is defined.
	* src/compatibility-ldbl.cc: Include "hash.cc".
	(_GLIBCXX_LONG_DOUBLE_COMPAT_IMPL): Define.
	(_ZNKSt4hashIeEclEe): New alias.
	* testsuite/util/testsuite_abi.cc (check_version): Support
	GLIBCXX_LDBL_3.4.10. 

2008-02-29  Jakub Jelinek  <jakub@redhat.com>
            Benjamin Kosnik  <bkoz@redhat.com>
            
        * src/hash_c++0x.cc: Add just C++0x version of TR1 hash.
        * include/bits/functional_hash.h: Remove error_code bits.
        * src/Makefile.am: Add hash_c++0x.cc.
        * src/Makefile.in: Regenerate.  
        * config/abi/pre/gnu.ver: Remove hash<error_code> export.

2008-02-28  Benjamin Kosnik  <bkoz@redhat.com>

	* src/Makefile.am: Remove <system_error> support.
	* include/Makefile.am: Same.
	* acinclude.m4: Same.
	* configure.ac: Same.
	* configure: Regenerate.
	* src/Makefile.in: Same.
	* include/Makefile.in: Same.
	* config.h.in: Same.

	* include/std/system_error: Remove.
	* include/std/ostream: Remove <system_error> support.